# SignalSimRealtime

./: .gitignore  CMakeLists.txt
CudaTest/: AdvancedCudaGuide.cpp  CMakeLists.txt  CompareSignals.cpp  CudaTest.cpp  README.md  TestGetIfSampleData.cpp  run_tests.sh
IFdataGen/: CMakeLists.txt  IFdataGen.cpp
inc/: CSatIfSignalCUDA.h  SatelliteSignal.h
src/: CSatIfSignalCUDA.cpp  SatIfSignal.cpp  SatelliteSignal.cpp  kernel.cu
